# tintinland-rust-course

./: .gitignore  Cargo.toml  LICENSE  README.md
lesson01/: Cargo.toml
lesson01/src/az/: az2.rs
lesson02/: README.md
lesson03/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  lesson03.er
lesson03/src/: lib.rs  main.rs
lesson03/src/business/: class.rs  course.rs  exam.rs  grades.rs  mod.rs  ping.rs  schedule.rs  selection.rs  student.rs  teach.rs  teacher.rs
lesson03/src/conf/: mod.rs
lesson03/src/model/: deser.rs  entity.rs  mod.rs  req.rs  ret.rs  table.rs
lesson03/src/resp/: mod.rs
lesson03/src/route/: api.rs  mod.rs
lesson03/src/services/: class.rs  course.rs  exam.rs  grades.rs  mod.rs  ping.rs  schedule.rs  selection.rs  student.rs  teach.rs  teacher.rs
lesson03/src/sql/: table.sql
lesson03/src/store/: api_client.rs  cache.rs  database.rs  mod.rs
lesson0401/: Cargo.toml  README.md
lesson0401/src/: main.rs  msg_enum.rs
lesson0402/: Cargo.toml
lesson0402/src/: main.rs  msg_trait.rs
lesson0403/: Cargo.toml
lesson0403/src/: main.rs
lesson05/: README.md
lesson05/src/: main.rs
src/: main.rs
src/az/: az2.rs  mod.rs
