[package]
name = "lesson03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
schemars = { version = "0.8.11", features = ["uuid1", "chrono", "bigdecimal"] }
dotenv = "0.15.0"
dotenvy = "0.15.6"
futures = "0.3.24"
thiserror = "1.0.37"
anyhow = "1.0.65"
lazy_static = "1.3.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
okapi = "0.7.0-rc.1"
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
redis = { version = "0.22.1", features = ["aio", "tokio-comp", "connection-manager"] }
reqwest = { version = "0.11.12", features = ["json"] }
url = { version = "2.3.1", features = ["serde"] }
sea-query = { version = "0.28.0", features = ["derive", "attr", "thread-safe", "backend-mysql", "with-chrono", "with-time", "with-json", "with-rust_decimal", "with-bigdecimal", "with-uuid"] }
uuid7 = { version = "0.3.3", features = ["serde", "uuid"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["all", "runtime-tokio-rustls"] }
sentry = { version = "0.29.1", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "transport"] }
regex = "1.7.0"
clap = { version = "4.0.32", features = ["derive"] }
calamine = "0.19.1"
csv = "1.2.1"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_mysql"]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4", # Lets you generate random UUIDs
    "serde",
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
